style/app.css
/* ... */
.main nav span.button {
  margin-left: -2.4rem;
  cursor: default;
}

@media( min-width: 800px ) {

  .brands {
    margin-top: 19.6rem;
  }

  .main {
    padding-right: calc( 50vw + 4.8rem );
    padding-left: 4.8rem;
  }

  .main::before {
    display: none;
  }

  .main .background {
    display: none;
  }

}



/* search */

input,
input[type=text],
input[type=search],
label,
button,
fieldset {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
	margin:0;
	border:0;
  border-radius: 0;
	padding:0;
	display:inline-block;
	vertical-align:middle;
	white-space:normal;
	background:none;
	line-height: 1.5;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;
}

input[type=search]::-ms-clear {
  display: none;
  width: 0;
  height: 0;
}

input[type=search]::-ms-reveal {
  display: none;
  width : 0;
  height: 0;
}

input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
  display: none;
}

form {
  background: var(--light-100);
  border-radius: 1.6rem 1.6rem 0 0;
  width: 100%;
  max-width: 42rem;
  overflow: hidden;
  pointer-events: all;
  box-shadow: 0 0 4.8rem var(--dark-100);
}

form > * {
  width: 100%;
  max-width: 100%;
}

fieldset {
  min-width: 0;
  width: 100%;
}

input:focus,
input[type=text]:focus,
input[type=search]:focus,
button {
	outline:0;
}

::-webkit-search-decoration {
	display:none;
}

.search {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  pointer-events: none;
  z-index: 2;
  padding: 0 1.2rem;
}

.search .suggestions {
  /* display: none; */
}

.suggestions button {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  height: 6.4rem;
  padding: .8rem 2.4rem;
  font-size: 1.4rem;
}

.suggestions button:hover {
  cursor: pointer;
  background: var(--dark-05);
}

.suggestions button span {
  display: flex;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  pointer-events: none;
}

.suggestions button span + span {
  color: var(--dark-50);
}

.input,
.geolocation {
  height: 6.4rem;
  width: 100%;
}

.input {
  position: relative;
  display: flex;
}

.input label {
  position: relative;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  width: 100%;
  padding: 0 0 0 2.4rem;
}

.input label > div {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  pointer-events: none;
}

.input label input {
  width: calc( 100% - 6.4rem );
  height: 100%;
  caret-color: var(--highlight);
}

.input label .line::before {
  content: '';
  display: flex;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100%;
  transform: scaleX( 0 );
  transform-origin: left;
  background: var(--highlight);
  transition: transform .6s ease-in-out;
}

.input label input:focus + div .line::before {
  transform: scaleX( 1 );
}

.input label .line {
  position: absolute;
  width: calc( 100% - 4.8rem );
  height: .2rem;
  max-height: 2px; /* fix transitions if rem is not 10px  */
  background: var(--dark-100);
  right: 2.4rem;
  left: 2.4rem;
  bottom: -.1rem;
}

.input .icon,
.input button {
  position: absolute;
  height: 6.4rem;
  min-width: 6.4rem;
  display: flex;
  justify-content: center;
  align-items: center;
  top: 0;
  right: 0;
  bottom: 0;
  flex-shrink: 0;
  color: var(--dark-50);
}

.input button {
  pointer-events: all
}

.input .icon {
  display: none;
}

.input label input:placeholder-shown + div .icon {
  display: flex;
}

.input label input:placeholder-shown + div button {
  display: none;
}

.geolocation .material-icons {
  font-size: 1.6rem;
}

.geolocation button {
  justify-content: flex-start;
  width: 100%;
}

.geolocation button:hover {
  color: var(--highlight);
}

.app[data-geolocation="false"] .geolocation button {
  display: none;
}

@media( min-width: 800px ) {

  .search {
    left: 50%;
  }

  form {
    max-width: 37.5rem;
    border-radius: 1.6rem;
    margin-bottom: 6.4rem;
  }

}



/* story */

#map {
  position: absolute;
  top: -14.4rem; /* should be calculated in JS */
  right: 0;
  bottom: 0;
  left: 0;
}

@media ( min-width: 480px ) {
  #map {
    top: 0;
  }
}

.mapboxgl-ctrl.mapboxgl-ctrl-attrib {
  background: transparent;
}

.mapboxgl-ctrl-attrib a {
  color: var(--light-50);
}

.marker {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  width: 0px;
  height: 0px;
}

.marker::before {
  content: attr(data-label-content);
  position: absolute;
  display: inline-flex;
  flex-shrink: 0;
  justify-content: center;
  align-items: center;
  white-space: nowrap;
  padding: .4rem .8rem;
  border-radius: .8rem;
  line-height: 1.5;
  font-size: 1.4rem;
  background: var(--highlight);
  color: var(--light-100);
  opacity: 0;
  bottom: 1.6rem;
}

.marker::after {
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: .8rem .8rem 0 .8rem;
  border-color: var(--highlight) transparent transparent transparent;
  opacity: 0;
  bottom: calc( .8rem + .1rem );
}

.marker[data-label="true"]::before,
.marker[data-label="true"]::after {
  opacity: 1;
}

.marker[data-label-index="0"] {
  width: 1.2rem;
  min-width: 1.2rem;
  height: 1.2rem;
  min-height: 1.2rem;
  background: var(--dark-100);
  border-radius: 50%;
  border: .3rem solid var(--highlight);
}

.marker[data-label-index="0"]::before {
  bottom: 3.2rem;
}

.marker[data-label-index="0"]::after {
  bottom: calc( 2.4rem + .1rem );
}

#user {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  pointer-events: none;
  opacity: 0;
}
/* ... */

